2006-02-26 Perry
 PATCH: [ 1435470 ] Remove CTextFile
  Src: Merge.dsp
  Deleted Src\Common: textfile.cpp textfile.h

2006-02-24 Kimmo
 PATCH: [ 1437758 ] Improve diff selection when selected diff not visible
  Src: MergeEditView.cpp MergeEditView.h
 PATCH: [ 1431607 ] Fix worddiff highlight error
  Submitted by Perry
  Src: stringdiffs.cpp

2006-02-24 Tim
 PATCH: [ 1437677 ] Various Updates in German Translation for WinMerge 2.5
  Src/Languages/German: MergeGerman.rc

2006-02-22 Kimmo
 PATCH: [ 1435431 ] Fix GenerateReport lines
  Submitted by Perry
  Src: DirCmpReport.cpp
 PATCH: [ 1395721 ] VS.NET 2003 warning of SEH bug
  Src: Merge.dsp
 PATCH: [ 1428686 ] Catalan translation update
  By Jordi Vilar
  Src/Languages/Catalan: MergeCatalan.rc
 PATCH: [ 1430321 ] Swedish translation update and feedback on WinMerge 2.5.3.2
  By Hans Eriksson
  Src\Languages\Swedish: MergeSwedish.rc
 PATCH: [ 1434270 ] Fix difference counts
  Submitted by Perry
  Src: DiffWrapper.cpp

2006-02-21 Kimmo
 PATCH: [ 1435384 ] Add context menu for diff pane
  Src: Merge.rc MergeDiffDetailView.cpp MergeDiffDetailView.h resource.h
  Src/Languages/*: Merge*.rc
 PATCH: [ 1433125 ] Trap errors from filesystem during actions
  Src: FileActionScript.cpp

2006-02-21 Perry
 PATCH: [ 1405603 ] New Test dialog for file filters
  (Forgot to do all the language resources)
 and misc RC file fixes (eg, many fixes in editor proppage)
 New: Src/Languages: WinMerge_Resource_Discrepencies.txt

2006-02-20 Perry
 PATCH: [ 1405603 ] New Test dialog for file filters
  Src: FileFilterMgr.cpp FileFilterMgr.h FileFiltersDlg.cpp
   FileFiltersDlg.h Merge.dsp Merge.rc resource.h
  Src new: TestFilterDlg.cpp TestFilterDlg.h
 PATCH: [ 1433312 ] Add cvs tags to source files
  Src: ByteComparator.cpp SharedFilterDlg.cpp StdAfx.cpp
   TestFilterDlg.cpp TestFilterDlg.h ViewableWhitespace.cpp
  Src/Common: SortHeaderCtrl.cpp SortHeaderCtrl.h UniFile.cpp
   UniFile.h textfile.cpp textfile.h unicoder.cpp unicoder.h